--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -46,7 +46,7 @@ on init
     chmod 0777 /init.recovery.qcom.sh
     start init-recovery-qcom-sh
 
-ervice sbinqseecomd /sbin/qseecomd
+service sbinqseecomd /sbin/qseecomd
     user root
     group root
     disabled
@@ -114,4 +114,3 @@ on property:vendor.sys.listeners.registered=true
     start keymaster-4-0
     start gatekeeper-1-0
     start servicemanager
-
