--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -1,5 +1,7 @@
 # Copyright (c) 2009-2012, 2014-2015, The Linux Foundation. All rights reserved.
 #
+# Copyright (C) 2020-2021 OrangeFox Recovery Project
+#
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
 #     * Redistributions of source code must retain the above copyright
@@ -46,7 +48,7 @@ on init
     chmod 0777 /init.recovery.qcom.sh
     start init-recovery-qcom-sh
 
-service sbinqseecomd /sbin/qseecomd
+service sbinqseecomd /system/bin/qseecomd
     user root
     group root
     disabled
@@ -79,13 +81,13 @@ service keystore /system/bin/keystore /tmp/misc/keystore
     disabled
     seclabel u:r:recovery:s0
 
-service gatekeeper-1-0 /sbin/android.hardware.gatekeeper@1.0-service-qti
+service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service-qti
     user root
     group root
     disabled
     seclabel u:r:recovery:s0
 
-service keymaster-4-0 /sbin/android.hardware.keymaster@4.0-service-qti
+service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service-qti
     user root
     group root
     disabled
