--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ on:
 env:
   MANIFEST: git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-10.0
   DEVICE: phoenix
-  DT_LINK: https://github.com/hraj9258/twrp_phoenix
+  DT_LINK: https://github.com/hraj9258/twrp_phoenix -b test
   DT_PATH: device/xiaomi/phoenix
   CHAT_ID: ${{ secrets.CHAT_ID }}
   BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
