--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -27,9 +27,6 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-#Qcom Default Decryption
-#import /init.recovery.qcom_decrypt.rc
-
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
@@ -74,7 +71,7 @@ service keystore_auth /system/bin/keystore_auth
     disabled
     seclabel u:r:recovery:s0
 
-# keystore is started and stopped on demand by Ofox
+# keystore is started and stopped on demand by TWRP
 service keystore /system/bin/keystore /tmp/misc/keystore
     user root
     group root drmrpc readproc
@@ -93,6 +90,13 @@ service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service-qti
     disabled
     seclabel u:r:recovery:s0
 
+service unified-script /system/bin/unified-script.sh
+    user root
+    group root
+    disabled
+    oneshot
+    seclabel u:r:recovery:s0
+
 service init-recovery-qcom-sh /init.recovery.qcom.sh
     user root
     group root
@@ -102,6 +106,8 @@ service init-recovery-qcom-sh /init.recovery.qcom.sh
 
 on boot
     setprop sys.usb.config adb
+    chmod 0777 /system/bin/unified-script.sh
+    start unified-script
 
 on property:crypto.ready=0
     stop sbinqseecomd
