--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ env:
   CHAT_ID: ${{ secrets.TEST_CHAT_ID }}
   BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
   TARGET: recoveryimage
+  FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER: 1
   TZ: Asia/Kolkata
 
 jobs:
@@ -60,12 +61,15 @@ jobs:
        - name: Building OrangeFox Recovery
          run: |
               cd ~/OrangeFox_10/fox_10.0
-              source build/envsetup.sh &&export ALLOW_MISSING_DEPENDENCIES=true &&export FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER=1 &&export LC_ALL="C"
+              source build/envsetup.sh
+              export ALLOW_MISSING_DEPENDENCIES=true 
+              export FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER=1 
+              export LC_ALL="C"
               lunch omni_phoenix-eng &&mka recoveryimage
 
        - name: Uploading recovery image
          run: |
-              cd out/target/product/phoenix
+              cd ~/OrangeFox_10/fox_10.0/out/target/product/phoenix
               curl -F chat_id=$CHAT_ID -F document=@OrangeFox-Unofficial-phoenix.zip https://api.telegram.org/bot$BOT_TOKEN/sendDocument
               sudo zip -r9 ofox-phoenix.zip recovery.img
               curl -F chat_id=$CHAT_ID -F document=@ofox-phoenix.zip https://api.telegram.org/bot$BOT_TOKEN/sendDocument
